# rust-react-project

./: .gitignore  package-lock.json  package.json
backend/: Cargo.toml  Rocket.toml
backend/src/: cors.rs  db.rs  main.rs  scheduler.rs
backend/src/auth/: guard.rs  jws.rs  mod.rs
backend/src/controllers/: backup_controller.rs  booking_controller.rs  category_controller.rs  mod.rs  resource_controller.rs  user_controller.rs
backend/src/enums/: app_error.rs  booking_status.rs  mod.rs  payment_for.rs  user_role.rs
backend/src/models/: booking_model.rs  category_model.rs  image_model.rs  mod.rs  resource_model.rs  user_model.rs
backend/src/services/: backup_service.rs  booking_service.rs  category_service.rs  image_service.rs  mod.rs  resources_service.rs  user_service.rs
backend/src/templates/: resource_rented.hbs
backend/src/utility/: email_sender.rs
backend/src/validators/: password_validator.rs
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: bookings.ts  categories.ts  images.ts  resources.ts  users.ts
frontend/src/pages/: login.tsx  (+5 more)
mobile/: babel.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
mobile/app/: App.tsx  Header.tsx  _layout.tsx  createResource.tsx  index.tsx
shared/: package-lock.json  package.json
shared/api/: bookings.ts  categories.ts  images.ts  location.ts  resources.ts  users.ts
shared/hooks/: useLocationForm.ts
shared/types/: booking.ts  category.ts  location.ts  resource.ts  users.ts
shared/utile/: jwt.ts
(+65 files in other folders)
