[package]
name = "diplomna"
version = "0.5.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0", features = ["json","secrets", "tls"] }
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.7", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
thiserror = "2.0.12"
argon2 = "0.5"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
rand_core = { version = "0.9.5", features = ["std"] }
validator = {version = "0.20", features = ["derive"]} 
validator_derive = "0.20"
regex = "1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
chrono = {version = "0.4", features = ["serde"]}
rocket_cors = "0.6"
lettre ={ version = "0.11.21", features = ["tokio1-native-tls", "smtp-transport", "serde"]}

[dev-dependencies]
sea-orm-cli = "1.1.7"